<resources>
    <string name="app_name">Todo App</string>
    <string name="enterActivityName">Enter activity name</string>
    <string name="enterActivityPriority">Enter activity priority</string>
    <string name="enterActivityDate">Enter activity date</string>
    <string name="submit">Submit</string>
    <string name="deleteElement">delete element</string>
    <string name="deleteAll">Delete All</string>
    <string name="save">Save</string>
    <string name="item">Item</string>
    <string name="edit_item_below">Edit item below</string>
</resources>