<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".ManageItem">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/edit_item_below"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="62dp" />

    <EditText
        android:id="@+id/itemEditField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/item"
        android:layout_marginBottom="30dp"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="129dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/save"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="243dp" />
</LinearLayout>