<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/toDoList"
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/submit_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <LinearLayout
                android:id="@+id/info_area"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <EditText
                android:id="@+id/activityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="nothing"
                android:hint="@string/enterActivityName"
                android:inputType="text" />

            <EditText
                android:id="@+id/activityPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="nothing"
                android:hint="@string/enterActivityPriority"
                android:inputType="number" />
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/submit" />
        </LinearLayout>

    <Button
        android:id="@+id/deleteButton"
        android:text="@string/deleteAll"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>